    - Added explicit type `RiskFlag[]` for parsed `riskFlags`.
    - Used `Prisma.JsonValue` for `riskFlags` prop type.
- `/next.config.ts`:
    - Corrected type definition using JSDoc `/** @type {import("next").NextConfig} */` instead of importing `NextConfig` type.

**Build Status (v2):**
- `npm run build` failed with persistent `PageProps` type error in `src/app/app/report/[id]/page.tsx`.




### v4 (2025-05-03)

*   **Fix:** Inlined `src/lib/auth.ts`, `src/lib/prisma.ts`, `src/lib/supabase.ts`, `src/lib/stripe.ts`, and `src/lib/openai.ts` logic directly into the respective API route files (`src/app/api/**/route.ts`) to bypass persistent module resolution errors during the build process. Original lib files remain but are no longer imported by API routes.
*   **Fix:** Ensured critical files (`src/lib/auth.ts`, `src/lib/prisma.ts`, `src/app/globals.css`) are present (though lib files are now effectively unused by API routes due to inlining).




### v5 (2025-05-03)

*   **Fix:** Changed path alias imports (`@/lib/...`) to relative paths (`../../lib/...` or `../../../../lib/...`) in `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx` to resolve build errors (Option B).
*   **Note:** Verified `src/app/layout.tsx` already used a relative path for `globals.css`.




### v6 (2025-05-03)

*   **Fix:** Re-verified and explicitly overwrote `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx` to use relative paths (`../../lib/...` and `../../../../lib/...` respectively) instead of path aliases (`@/lib/...`) for `authOptions` and `prisma` imports, as requested.
*   **Note:** Local build (`npm run build`) confirms these specific files no longer cause alias-related build errors. However, the build still fails due to an unrelated type error (`Module '@prisma/client' has no exported member 'PrismaClient'`) in `src/app/api/auth/[...nextauth]/route.ts` which was present previously and is outside the scope of this specific fix.
